# serializer version: 1
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_cooling_curve_1_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_cooling_curve_1_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Cooling curve 1 active',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '350',
    'unique_id': 'test_entry_xtherma-350',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_cooling_curve_1_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Cooling curve 1 active',
      'icon': 'mdi:snowflake',
      'parameter': '350',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_cooling_curve_1_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_cooling_curve_2_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_cooling_curve_2_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Cooling curve 2 active',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '450',
    'unique_id': 'test_entry_xtherma-450',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_cooling_curve_2_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Cooling curve 2 active',
      'icon': 'mdi:snowflake',
      'parameter': '450',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_cooling_curve_2_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heat_pump_turned_on-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heat_pump_turned_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heat pump turned on',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '001',
    'unique_id': 'test_entry_xtherma-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heat_pump_turned_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Heat pump turned on',
      'parameter': '001',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heat_pump_turned_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heating_curve_1_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heating_curve_1_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:heating-coil',
    'original_name': 'Heating curve 1 enabled',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '310',
    'unique_id': 'test_entry_xtherma-310',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heating_curve_1_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Heating curve 1 enabled',
      'icon': 'mdi:heating-coil',
      'parameter': '310',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heating_curve_1_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heating_curve_2_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heating_curve_2_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:heating-coil',
    'original_name': 'Heating curve 2 enabled',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '410',
    'unique_id': 'test_entry_xtherma-410',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_heating_curve_2_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Heating curve 2 enabled',
      'icon': 'mdi:heating-coil',
      'parameter': '410',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_heating_curve_2_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_hot_water_now-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_hot_water_now',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-boiler',
    'original_name': 'Hot water now',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '003',
    'unique_id': 'test_entry_xtherma-003',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_hot_water_now-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config Hot water now',
      'icon': 'mdi:water-boiler',
      'parameter': '003',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_hot_water_now',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_ss14a_enwg_request-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_ss14a_enwg_request',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '§14a EnWG request',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '815',
    'unique_id': 'test_entry_xtherma-815',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_select_modbus_tcp[mock_modbus_tcp_client0][switch.test_entry_xtherma_modbus_config_ss14a_enwg_request-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_modbus_config §14a EnWG request',
      'parameter': '815',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_modbus_config_ss14a_enwg_request',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_cooling_curve_1_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_cooling_curve_1_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Cooling curve 1 active',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '350',
    'unique_id': 'test_entry_xtherma-350',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_cooling_curve_1_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Cooling curve 1 active',
      'icon': 'mdi:snowflake',
      'parameter': '350',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_cooling_curve_1_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_cooling_curve_2_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_cooling_curve_2_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'Cooling curve 2 active',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '450',
    'unique_id': 'test_entry_xtherma-450',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_cooling_curve_2_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Cooling curve 2 active',
      'icon': 'mdi:snowflake',
      'parameter': '450',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_cooling_curve_2_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heat_pump_turned_on-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_heat_pump_turned_on',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heat pump turned on',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '001',
    'unique_id': 'test_entry_xtherma-001',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heat_pump_turned_on-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Heat pump turned on',
      'parameter': '001',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_heat_pump_turned_on',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heating_curve_1_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_heating_curve_1_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:heating-coil',
    'original_name': 'Heating curve 1 enabled',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '310',
    'unique_id': 'test_entry_xtherma-310',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heating_curve_1_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Heating curve 1 enabled',
      'icon': 'mdi:heating-coil',
      'parameter': '310',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_heating_curve_1_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heating_curve_2_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_heating_curve_2_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:heating-coil',
    'original_name': 'Heating curve 2 enabled',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '410',
    'unique_id': 'test_entry_xtherma-410',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_heating_curve_2_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Heating curve 2 enabled',
      'icon': 'mdi:heating-coil',
      'parameter': '410',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_heating_curve_2_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_hot_water_now-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_hot_water_now',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:water-boiler',
    'original_name': 'Hot water now',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '003',
    'unique_id': 'test_entry_xtherma-003',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_hot_water_now-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config Hot water now',
      'icon': 'mdi:water-boiler',
      'parameter': '003',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_hot_water_now',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_ss14a_enwg_request-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_entry_xtherma_config_ss14a_enwg_request',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '§14a EnWG request',
    'platform': 'xtherma_fp',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': '815',
    'unique_id': 'test_entry_xtherma-815',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup_switch_rest_api[mock_rest_api_client0][switch.test_entry_xtherma_config_ss14a_enwg_request-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test_entry_xtherma_config §14a EnWG request',
      'parameter': '815',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_entry_xtherma_config_ss14a_enwg_request',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
